--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,11 +1,13 @@
 # Dependencies
 node_modules/
 */node_modules/
-# Keep environment variables out of version control
+
+# Environment variables
 .env
 */.env
 
-backend/generated/prisma
+# Prisma generated 
+/generated/prisma
 
 # Build outputs
 dist/
